--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -17,10 +17,15 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="{% static 'scc/blog.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/blog.css' %}" />
   </head>
   <body>
     <div class="page-header">
+      {% if user.is_authenticated %}
+      <a href="{% url 'post_new' %}" class="top-menu"
+        ><span class="glyphicon glyphicon-plus"></span
+      ></a>
+      {% endif %}
       <h1><a href="/">Django Blog</a></h1>
     </div>
     <div class="content container">
